tests/specs/ecosystem/molikodev/twitchts/0_1_4.test
molikodev/twitchts/0.1.4
-- deno.lock --
{}
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Module not found "file://<tmpdir>/src/util/session".
    at file://<tmpdir>/src/helix/EventSub/EventSub.ts:1:30

